# PDF-Extraction-and-Query

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py
.claude/: settings.local.json
docs/: API_DOCUMENTATION.md  API_QUICKSTART.md  CHUNKER_COMPARISON.md  CHUNKING_STRATEGY_CHANGE.md  CLEANUP_SUMMARY.md  NAMING_CONVENTIONS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  READY_TO_TEST.md  SCRIPTS_REFERENCE.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  UNIMPLEMENTED_FEATURES.md  VECTOR_STORE_SETUP.md
evaluation/: CHUNKING_COMPARISON_RESULTS.md  EVALUATION_GUIDE.md  EVALUATION_NOTES_TEMPLATE.md  ma_test_queries.json
scripts/: analyze_results.py  evaluate_queries.py  init_database.py  list_documents.py  manage_database.py  query_documents.py  reprocess_all_documents.py  upload_pdf.py
src/api/: __init__.py  main.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  documents.py  health.py  search.py  upload.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/api/services/: rag_service.py
src/chunking/: __init__.py  base_chunker.py  factory.py  langchain_chunker.py
src/config/: __init__.py  constants.py  settings.py
src/embeddings/: __init__.py  base_embedder.py  bedrock_embedder.py  sentence_transformer_embedder.py
src/extraction/: __init__.py  base.py  formatting_extractor.py  pymupdf_extractor.py  textract_extractor.py
src/preprocessing/: __init__.py  header_detector.py  section_parser.py  text_cleaner.py
src/search/: __init__.py  semantic_search.py
src/tagging/: __init__.py  document_tagger.py
src/tagging/prompts/: tagging_prompts.py
src/utils/: __init__.py  exceptions.py  logger.py  processing_result.py  validators.py
src/vector_store/: README.md  __init__.py  base_store.py  pgvector_client.py  schema.py
tests/: TEST_README.md  conftest.py  run_test.bat  test_full_pipeline.py  test_interactive_search.py
tests/integration/: test_extraction_to_cleaning.py  test_full_pipeline.py
tests/unit/: test_chunking.py  test_cleaners.py  test_embeddings.py  test_extractors.py  test_formatting_extraction.py  test_line_wrapping.py  test_pymupdf_extraction.py  test_text_cleaning.py  test_vector_store.py
